--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/CreateEdit.cshtml
@@ -39,7 +39,7 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.DepartmentShortCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.DepartmentShortCode, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.DepartmentShortCode, new { @class = "form-control", onkeypress = "return CoditechCommon.AvoidSpacing()" })
                                         @Html.ValidationMessageFor(x => x.DepartmentShortCode)
                                     </div>
                                 </div>
