GMSD-244: ORG - Unable to Delete Record in General District Master List

--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDistrictMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDistrictMaster/_List.cshtml
@@ -40,7 +40,7 @@
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                                                 <!-- Delete action with GeneralTaxMasterId parameter -->
-                                                <a href="/@controllerName/Delete?taxMasterIds=@item.GeneralDistrictMasterId" class="btn btn-outline-danger">Delete</a>
+                                                <a href="/@controllerName/Delete?districtIds=@item.GeneralDistrictMasterId" class="btn btn-outline-danger">Delete</a>
                                             </div>
                                         </div>
                                     </div>
