--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDesignationMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDesignationMaster/CreateEdit.cshtml
@@ -40,7 +40,7 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.ShortCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.ShortCode, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.ShortCode, new { @class = "form-control", onkeypress = "return CoditechCommon.AvoidSpacing()" })
                                         @Html.ValidationMessageFor(x => x.ShortCode)
                                     </div>
                                 </div>
