--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMNewRegistration/DBTMNewRegistration.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMNewRegistration/DBTMNewRegistration.cshtml
@@ -55,11 +55,35 @@
                         </div>
                     </div>
                     <!-- Email ID -->
-                    <div class="col-lg-12">
+                    <div class="col-lg-6">
                         <div class="mb-3">
                             @Html.LabelFor(x => x.EmailId, new { @class = "form-label required" })
                             @Html.TextBoxFor(x => x.EmailId, new { @class = "form-control" })
                             @Html.ValidationMessageFor(x => x.EmailId)
+                        </div>
+                    </div> 
+                    <div class="col-lg-6" id="EmailIdSendOTPDivId">
+                        <div class="mb-3">
+                            <label class="form-label">&nbsp;</label>
+                            <div class="form-check" style="padding-left:0px !important; display:block !important">
+                                <button type="button" class="btn btn-warning" onclick="CoditechCommon.SendOTP('email')">Send OTP</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6" id="EmailIdTokenDivId" style="display:none">
+                        <div class="mb-3">
+                            <label class="form-label">Verify OTP</label>
+                            @Html.TextBoxFor(x => x.EmailIdToken, new { @class = "form-control", onkeypress = "return CoditechCommon.ValidNumeric()", @style = "width:40%" })
+                            <button type="button" class="btn btn-warning" onclick="CoditechCommon.VerifySendOTP('email')">Verify OTP</button>
+                            <button type="button" class="btn btn-warning" onclick="CoditechCommon.SendOTP('email')">Send OTP Again</button>
+                        </div>
+                    </div>
+                    <div class="col-lg-6" id="EmailIdVerifiedOTPDivId" style="display:none">
+                        <div class="mb-3">
+                            <label class="form-label">Verification Status</label>
+                            <div class="form-check">
+                                @Html.CheckBoxFor(x => x.IsEmailIdVerifed, new { @class = "form-check-input", @disabled = "disabled" })
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-2">
@@ -212,12 +236,6 @@
                         <a href="/user/login" class="text-muted font-13"><i class="dripicons-lock"></i>Log in</a>
                     </div>
                 </div>
-
-                @* <div class="form-group mb-0 row">
-            <div class="col-sm-6 text-end">
-            <button class="btn btn-primary w-100 waves-effect waves-light">Submit<i class="fas fa-sign-in-alt ms-1"></i></button>
-            </div>
-            </div> *@
             }
         </div>
     </div>
