--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMActivityCategory/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMActivityCategory/CreateEdit.cshtml
@@ -3,8 +3,7 @@
     ViewBag.Title = Model.DBTMActivityCategoryId > 0 ? "Update Activity Category" : "Add Activity Category";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    DropdownViewModel dBTMParentActivityCategorys = new DropdownViewModel() { DropdownType = DropdownTypeEnum.DBTMActivityCategory.ToString(), DropdownName = "DBTMParentActivityCategoryId", DropdownSelectedValue = Model.DBTMParentActivityCategoryId.ToString(), ChangeEvent = "", Parameter = Model.DBTMActivityCategoryId.ToString() };
-
+    DropdownViewModel dBTMParentActivityCategorys = new DropdownViewModel() { DropdownType = DropdownTypeEnum.DBTMActivityCategory.ToString(), DropdownName = "DBTMParentActivityCategoryId", DropdownSelectedValue = Model.DBTMParentActivityCategoryId.ToString(), ChangeEvent = "", Parameter = Model.DBTMActivityCategoryId.ToString(), IsRequired = false };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -33,30 +32,30 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.ActivityCategoryName, new { @class = "form-label required"})
-                                        @Html.TextBoxFor(x => x.ActivityCategoryName, new { @class = "form-control"})
+                                        @Html.LabelFor(x => x.ActivityCategoryName, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.ActivityCategoryName, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.ActivityCategoryName)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.ActivityCategoryCode, new { @class = "form-label required"})
-                                        @Html.TextBoxFor(x => x.ActivityCategoryCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()"})
+                                        @Html.LabelFor(x => x.ActivityCategoryCode, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.ActivityCategoryCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
                                         @Html.ValidationMessageFor(x => x.ActivityCategoryCode)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.DBTMParentActivityCategoryId, new { @class = "form-label"})
+                                        @Html.LabelFor(x => x.DBTMParentActivityCategoryId, new { @class = "form-label" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", dBTMParentActivityCategorys)
                                         @Html.ValidationMessageFor(x => x.DBTMParentActivityCategoryId)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label"})
+                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
                                         <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input"})
+                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
                                         </div>
                                     </div>
                                 </div>
