GMSD-252: DBTM - Test Code Field in "Add DBTM Test" Allows Spaces.

--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTestMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTestMaster/CreateEdit.cshtml
@@ -45,7 +45,7 @@
                                         }
                                         else
                                         {
-                                            @Html.TextBoxFor(x => x.TestCode, new { @class = "form-control" })
+                                            @Html.TextBoxFor(x => x.TestCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
                                         }
                                         @Html.ValidationMessageFor(x => x.TestCode)
                                     </div>
