GMSD-258: DBTM - The **Assignment Date** field in the **Add DBTM Trainee Assignment** form is prefilled with `0001-01-01` instead of being blank, which may cause confusion or incorrect data entry.

--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTraineeAssignment/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTraineeAssignment/CreateEdit.cshtml
@@ -125,6 +125,7 @@
 @section scripts {
     <script type="text/javascript">
         $(function () {
+             $('#AssignmentDate').val('');
             var today = new Date();
             var oneYearFromNow = new Date();
             oneYearFromNow.setFullYear(today.getFullYear() + 1);
