--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralCountryMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralCountryMaster/CreateEdit.cshtml
@@ -53,7 +53,7 @@
                                 <div class="col-lg-5">
                                     <div class="mb-7">
                                         @Html.LabelFor(x => x.CallingCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.CallingCode, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.CallingCode, new { @class = "form-control", @id = "callingCodeInput" })
                                         @Html.ValidationMessageFor(x => x.CallingCode)
                                     </div>
                                 </div>
@@ -75,3 +75,17 @@
         </div>
     </div>
 </div>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const input = document.getElementById("callingCodeInput");
+
+        input.addEventListener("input", function () {
+            // Allow only numbers and the '+' sign
+            const validPattern = /^[0-9+]*$/;
+
+            if (!validPattern.test(input.value)) {
+                input.value = input.value.replace(/[^0-9+]/g, '');
+            }
+        });
+    });
+</script>
