--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTraineeAssignment/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTraineeAssignment/CreateEdit.cshtml
@@ -125,7 +125,9 @@
 @section scripts {
     <script type="text/javascript">
         $(function () {
-             $('#AssignmentDate').val('');
+            if (@Model.DBTMTraineeAssignmentId == 0) {
+                $('#AssignmentDate').val('');
+            }
             var today = new Date();
             var oneYearFromNow = new Date();
             oneYearFromNow.setFullYear(today.getFullYear() + 1);
