--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TicketMaster/CreateEditTicketMaster.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TicketMaster/CreateEditTicketMaster.cshtml
@@ -8,7 +8,7 @@
 <div class="page-content mt-5">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-8">
                 <div class="card">
                     <div class="card-header">
                         <div class="row align-items-center">
@@ -28,43 +28,100 @@
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.TicketMasterId)
+                            @Html.HiddenFor(m => m.TicketDetailsId)
                             <div class="row">
-                                <div class="col-lg-8">
+                                <div class="col-lg-12">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.Subject, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.Subject, new { @class = "form-control" })
+                                        @if (Model.TicketMasterId > 0)
+                                        {
+                                            @Html.TextBoxFor(x => x.Subject, new { @class = "form-control", @readonly = "readonly" })
+                                        }
+                                        else
+                                        {
+                                            @Html.TextBoxFor(x => x.Subject, new { @class = "form-control" })
+                                        }
                                         @Html.ValidationMessageFor(x => x.Subject)
                                     </div>
                                 </div>
-                                <div class="col-lg-8">
+                                <div class="col-lg-12">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.Details, new { @class = "form-label" })
                                         @Html.TextAreaFor(x => x.Details, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.Details)
                                     </div>
                                 </div>
-                                <div class="col-lg-8">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.TicketPriorityEnumId, new { @class = "form-label" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownSelectedValue = Model.TicketPriorityEnumId.ToString(),
                                    DropdownName = "TicketPriorityEnumId",
-                                   GroupCode = DropdownTypeEnum.TicketPriority.ToString()
+                                   GroupCode = DropdownTypeEnum.TicketPriority.ToString(),
+                                   IsDisabled = Model.TicketMasterId > 0
                                })
                                         @Html.ValidationMessageFor(x => x.TicketPriorityEnumId)
                                     </div>
-                                </div>                                                                                                                         
-                                <div class="col-lg-8">
+                                </div>
+                                <div class="col-lg-6">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.AddCc, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.AddCc, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.AddCc)
+                                        @Html.LabelFor(x => x.TicketStatusEnumId, new { @class = "form-label" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                               {
+                                   DropdownSelectedValue = Model.TicketStatusEnumId.ToString(),
+                                   DropdownName = "TicketStatusEnumId",
+                                   GroupCode = DropdownTypeEnum.TicketStatus.ToString(),
+                                   IsDisabled = Model.TicketMasterId > 0
+                               })
+                                        @Html.ValidationMessageFor(x => x.TicketStatusEnumId)
+                                    </div>
+                                </div>
+                                @if (Model.TicketMasterId <= 0)
+                                {
+                                    <div class="col-lg-12">
+                                        <div class="mb-3">
+                                            @Html.LabelFor(x => x.AddCc, new { @class = "form-label" })
+                                            @Html.TextBoxFor(x => x.AddCc, new { @class = "form-control" })
+                                            @Html.ValidationMessageFor(x => x.AddCc)
+                                        </div>
+                                    </div>
+                                }                             
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-lg-12">
+                                    <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                                    <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="mb-3">
+                                        <table class="table table-bordered table-sm" id="makeEditable">
+                                            <thead>
+                                                <tr>
+                                                    <th>Date with Time</th>
+                                                    <th>Requested/Responsed By</th>
+                                                    <th>Details</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                @if (Model?.TicketDetailsList?.Count > 0)
+                                                {
+                                                    foreach (var item in Model?.TicketDetailsList)
+                                                    {
+                                                        <tr>
+                                                            <td>@item.CreatedDate.ToCoditechDateWithTimeFormat()</td>
+                                                            <td> </td>
+                                                            <td>@item.Details</td>
+                                                        </tr>
+                                                    }
+                                                }
+                                            </tbody>
+                                        </table>
                                     </div>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
                 </div>
