GMSD-265: DBTM - Trainer Field Becomes Unselectable After Adding an Assignment.

--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTraineeAssignment/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTraineeAssignment/List.cshtml
@@ -4,7 +4,7 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "DBTMTraineeAssignment.GetDBTMTrainerListByCentreCode()" };
-    DropdownViewModel trainerDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDBTMTrainer.ToString(), DropdownName = "SelectedParameter1", DropdownSelectedValue = Convert.ToString(Model.GeneralTrainerMasterId), ChangeEvent = "DBTMTraineeAssignment.GetDBTMTrainerListByGeneralTrainerMasterId('" + @controllerName + "','" + @actionName + "')" };
+    DropdownViewModel trainerDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDBTMTrainer.ToString(), DropdownName = "SelectedParameter1", Parameter = Model.SelectedCentreCode, DropdownSelectedValue = Convert.ToString(Model.GeneralTrainerMasterId), ChangeEvent = "DBTMTraineeAssignment.GetDBTMTrainerListByGeneralTrainerMasterId('" + @controllerName + "','" + @actionName + "')" };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
