--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMNewRegistration/DBTMNewRegistration.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMNewRegistration/DBTMNewRegistration.cshtml
@@ -40,18 +40,44 @@
                             </div>
                         </div>
                     }
-                    <div class="col-lg-6">
+                    <div class="col-lg-3">
+                        <div class="mb-3">
+                            @Html.LabelFor(x => x.PersonTitle, new { @class = "form-label required" })
+                            @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                   {
+                       DropdownSelectedValue = Model.PersonTitle ?? string.Empty,
+                       DropdownName = "PersonTitle",
+                       GroupCode = DropdownTypeEnum.Title.ToString(),
+                       IsTextValueSame = true,
+                       IsRequired = true,
+                       IsStringProperty = true
+                   })
+                            @Html.ValidationMessageFor(x => x.PersonTitle)
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
                         <div class="mb-3">
                             @Html.LabelFor(x => x.FirstName, new { @class = "form-label required" })
                             @Html.TextBoxFor(x => x.FirstName, new { @class = "form-control", @onkeypress = "return CoditechCommon.AllowOnlyAlphabetWithouSpacing()" })
                             @Html.ValidationMessageFor(x => x.FirstName)
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-3">
                         <div class="mb-3">
                             @Html.LabelFor(x => x.LastName, new { @class = "form-label required" })
                             @Html.TextBoxFor(x => x.LastName, new { @class = "form-control", @onkeypress = "return CoditechCommon.AllowOnlyAlphabetWithouSpacing()" })
                             @Html.ValidationMessageFor(x => x.LastName)
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="mb-3">
+                            @Html.LabelFor(x => x.GenderEnumId, new { @class = "form-label required" })
+                            @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                   {
+                       DropdownSelectedValue = Model.GenderEnumId.ToString(),
+                       DropdownName = "GenderEnumId",
+                       GroupCode = DropdownTypeEnum.Gender.ToString()
+                   })   @Html.ValidationMessageFor(x => x.GenderEnumId)
                         </div>
                     </div>
                     <!-- Email ID -->
