--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMDeviceRegistrationDetails/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMDeviceRegistrationDetails/List.cshtml
@@ -11,8 +11,8 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <span class="card-title">DBTM Device Registration Details List</span>
-                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Registration Details</a>
+                        <span class="card-title"> Device Registration List</span>
+                        @* <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Registration Details</a> *@
                         
                     </div>
                     <div class="card-body">
