--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMDeviceRegistrationDetails/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMDeviceRegistrationDetails/_List.cshtml
@@ -11,21 +11,26 @@
 <div class="row">
     <div class="col-sm-12 table-responsive">
         <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
-            @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
+            <thead >
+            <tr>
+                <th class="sorting " onclick="CoditechDataTable.LoadListSortBy('dbtmdeviceregistrationdetails','list','DeviceSerialCode','desc')">Device Serial Code</th>
+                <th class="sorting" onclick="CoditechDataTable.LoadListSortBy('dbtmdeviceregistrationdetails','list','DeviceSerialCode','desc')">Device Name</th>
+                <th class="sorting" onclick="CoditechDataTable.LoadListSortBy('dbtmdeviceregistrationdetails','list','DeviceSerialCode','desc')">Purchase Date</th>
+                <th class="sorting" onclick="CoditechDataTable.LoadListSortBy('dbtmdeviceregistrationdetails','list','DeviceSerialCode','desc')">Is Master Device</th>
+            </tr>
+        </thead>
             <tbody>
                 @if (Model?.RegistrationDetailsList?.Count > 0)
                 {
                     foreach (var item in Model?.RegistrationDetailsList)
-                    {
-                        <tr>
-                            
-                            <td>@item.PurchaseDate</td>
-                            <td class="text-center">
-                                <a href="../@controllerName/Edit?dBTMDeviceRegistrationDetailId=@item.DBTMDeviceRegistrationDetailId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?dBTMDeviceRegistrationDetailIds=@item.DBTMDeviceRegistrationDetailId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
-                            </td>
-                        </tr>
-                    }
+                   {
+                     <tr>
+                        <td>@item.DeviceSerialCode</td>
+                              <td>@item.DeviceName</td>
+                              <td>@item.PurchaseDate.ToCoditechDateFormat()</td>
+                              <td> @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsMasterDevice)</td>
+                     </tr>
+                   }
                 }
             </tbody>
         </table>
