--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TicketMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TicketMaster/_List.cshtml
@@ -20,7 +20,7 @@
                         <tr>
                             <td>@item.TicketNumber</td>
                             <td>@item.TicketStatus</td>
-                            <td>@item.CreatedDate.ToCoditechDateFormat()</td>
+                            <td>@Convert.ToDateTime(@item.CreatedDate).ToCoditechDateWithTimeFormat()</td>
                             <td class="text-center">
                                 <a href="../@controllerName/Edit?ticketMasterId=@item.TicketMasterId" title="View" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fa fa-eye"></i></a>@* <span class="m-2">|</span> *@
                             </td>
