--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TicketMaster/CreateEditTicketMaster.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TicketMaster/CreateEditTicketMaster.cshtml
@@ -31,6 +31,7 @@
                             @if (Model.TicketMasterId > 0)
                             {
                                 @Html.HiddenFor(m => m.TicketStatusEnumId)
+                                @Html.HiddenFor(m => m.IsTicketReplied)
                             }
                             <div class="row">
                                 <div class="col-lg-12">
@@ -64,7 +65,7 @@
                                    DropdownSelectedValue = Model.TicketStatusEnumId.ToString(),
                                    DropdownName = "TicketStatusEnumId",
                                    GroupCode = DropdownTypeEnum.TicketStatus.ToString(),
-                                   IsDisabled = Model.TicketMasterId > 0
+                                   IsDisabled = !Model.IsTicketReplied
                                })
                                             @Html.ValidationMessageFor(x => x.TicketStatusEnumId)
                                         </div>
