GMSD-276 :GYM - Prefilled Value "0" for "Number of Weeks" and "Number of Days per Week" in Create Workout Plan - Gym Management System

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymWorkoutPlan/GymWorkoutPlan.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymWorkoutPlan/GymWorkoutPlan.cshtml
@@ -115,4 +115,15 @@
     </div>
 </div>
 
+@section scripts {
+    <script type="text/javascript">
+        $(function () {
+            $('#NumberOfDaysPerWeek').val('');
+            $('#NumberOfWeeks').val('');
+        }); 
+    </script> 
+}
+
+
+
 
