--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymWorkoutPlan/GymWorkoutPlan.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymWorkoutPlan/GymWorkoutPlan.cshtml
@@ -62,7 +62,7 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.Target, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.Target, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.Target, new { @class = "form-control", placeholder = "Enter Target Weight Here" })
                                         @Html.ValidationMessageFor(x => x.Target)
                                     </div>
                                 </div>
