--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMSubscriptionPlan/_DBTMSubscriptionPlanSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMSubscriptionPlan/_DBTMSubscriptionPlanSidePannel.cshtml
@@ -12,7 +12,7 @@
                 <a class="nav-link" href="/DBTMSubscriptionPlan/UpdateDBTMSubscriptionPlan?dBTMSubscriptionPlanId=@dBTMSubscriptionPlanId" aria-selected="true">
                     <i class="ti-menu"></i><h5 class="m-0 ps-2">Plan Details</h5>
                 </a>
-                <a class="nav-link" href="/DBTMSubscriptionPlan/GetDBTMSubscriptionPlanActivityList?dBTMSubscriptionPlanId=@dBTMSubscriptionPlanId" aria-selected="true">
+                <a class="nav-link" href="/DBTMSubscriptionPlan/GetDBTMSubscriptionPlanActivityList?SelectedParameter1=@dBTMSubscriptionPlanId" aria-selected="true">
                     <i class="fas fa-id-card-alt"></i><h5 class="m-0 ps-2">Plan Activity</h5>
                 </a>
             </div>
