--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMNewRegistration/DBTMNewRegistration.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMNewRegistration/DBTMNewRegistration.cshtml
@@ -223,16 +223,16 @@
                     <div class="col-lg-6">
                         <div class="mb-3">
                             @Html.LabelFor(x => x.DeviceSerialCode, new { @class = "form-label required" })
-                            @Html.TextBoxFor(x => x.DeviceSerialCode, new { @class = "form-control" })
+                            @Html.TextBoxFor(x => x.DeviceSerialCode, new { @class = "form-control", onkeypress = "return CoditechCommon.AvoidSpacing()" })
                             @Html.ValidationMessageFor(x => x.DeviceSerialCode)
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="mb-3">
                             <label class="form-label">&nbsp;</label>
-                            <div class="form-check" style="padding-left:0px !important;">
+                          @*   <div class="form-check" style="padding-left:0px !important;">
                                 <button type="button" class="btn btn-primary w-70 waves-effect waves-light">Add More Device<i class="fas fa-sign-in-alt ms-1"></i></button>
-                            </div>
+                            </div> *@
                         </div>
                     </div>
                     <div class="col-lg-6">
