--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMSubscriptionPlan/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMSubscriptionPlan/_List.cshtml
@@ -22,6 +22,7 @@
                     {
                         <tr>
                             <td>@item.PlanName</td>
+                            <td>@item.SubscriptionPlanType</td>
                             <td>@item.DurationInDays</td>
                             <td>@AdminGeneralHelper.FormatPriceWithCurrency(@item.PlanCost)</td>
                             <td>@AdminGeneralHelper.FormatPriceWithCurrency(@item.PlanDiscount)</td>                           
