--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskMaster/CreateEdit.cshtml
@@ -38,6 +38,13 @@
                                 </div>
                                 <div class="col-lg-8">
                                     <div class="mb-3">
+                                        @Html.LabelFor(x => x.TableName, new { @class = "form-label required" })
+                                        @Html.TextAreaFor(x => x.TableName, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.TableName)
+                                    </div>
+                                </div>
+                                <div class="col-lg-8">
+                                    <div class="mb-3">
                                         @Html.LabelFor(x => x.TaskDescription, new { @class = "form-label" })
                                         @Html.TextAreaFor(x => x.TaskDescription, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.TaskDescription)
