--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/RoleAllocatedToUserList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/RoleAllocatedToUserList.cshtml
@@ -14,7 +14,7 @@
             <div class="col-10">
                 <div class="card">
                     <div class="card-header">
-                        <span class="card-title">Role Allocated To User's</span>
+                        <span class="card-title">Role Allocated To User</span>
                         <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/GetAssociateUnAssociateAdminRoleToUser?adminRoleMasterId=@Model.AdminRoleMasterId" role="button"><i class="fas fa-plus me-2"></i>Allocate Role To User</a>
                     </div>
                     <div class="card-header">
